force-app/main/default/objects/JMS_Broker_Call_XREF__c/JMS_Broker_Call_XREF__c.object-meta.xml
<CustomObject>
    <label>Broker Call XREF</label>
    <nameField>
        <displayFormat>XREF-{0000}</displayFormat>
        <label>Broker Call XREF Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Broker Call XREFs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>