force-app/main/default/objects/JMS_Broker_Call_XREF__c/fields/JMS_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>JMS_Field_API_Name__c</fullName>
    <label>Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>