force-app/main/default/objects/JMS_Broker_Call_XREF__c/fields/JMS_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>JMS_Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>