force-app/main/default/objects/JMS_Broker_Call_XREF__c/fields/JMS_isVlookup__c.field-meta.xml
<CustomField>
    <fullName>JMS_isVlookup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsVlookup</label>
    <type>Checkbox</type>
</CustomField>