force-app/main/default/objects/JMS_Broker_Call_XREF__c/fields/JMS_Reason__c.field-meta.xml
<CustomField>
    <fullName>JMS_Reason__c</fullName>
    <label>Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>