force-app/main/default/objects/JMS_Broker_Call_XREF__c/fields/JMS_Source_Key__c.field-meta.xml
<CustomField>
    <fullName>JMS_Source_Key__c</fullName>
    <label>Source Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>