force-app/main/default/objects/JMS_Broker_Call_XREF__c/fields/JMS_Target_Key__c.field-meta.xml
<CustomField>
    <fullName>JMS_Target_Key__c</fullName>
    <label>Target Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>