force-app/main/default/objects/JMS_Broker_Call_XREF__c/fields/JMS_Target_Value__c.field-meta.xml
<CustomField>
    <fullName>JMS_Target_Value__c</fullName>
    <label>Target Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>