force-app/main/default/objects/JMS_Broker_Call_XREF__c/recordTypes/JMS_Affinity_Group.recordType-meta.xml
<RecordType>
    <fullName>JMS_Affinity_Group</fullName>
    <active>true</active>
    <label>Affinity Group</label>
</RecordType>