force-app/main/default/objects/JMS_Broker_Call_XREF__c/recordTypes/JMS_AMCA_Corporate.recordType-meta.xml
<RecordType>
    <fullName>JMS_AMCA_Corporate</fullName>
    <active>true</active>
    <label>AMCA Sales &amp; Marketing</label>
</RecordType>