force-app/main/default/objects/JMS_Broker_Call_XREF__c/recordTypes/JMS_EISERLOH.recordType-meta.xml
<RecordType>
    <fullName>JMS_EISERLOH</fullName>
    <active>true</active>
    <label>Eiserloh Company</label>
</RecordType>