force-app/main/default/objects/JMS_Broker_Call_XREF__c/recordTypes/JMS_FREEMAN_SIGNATURE.recordType-meta.xml
<RecordType>
    <fullName>JMS_FREEMAN_SIGNATURE</fullName>
    <active>true</active>
    <label>FREEMAN SIGNATURE</label>
</RecordType>