force-app/main/default/objects/JMS_Broker_Call_XREF__c/recordTypes/JMS_IAC.recordType-meta.xml
<RecordType>
    <fullName>JMS_IAC</fullName>
    <active>true</active>
    <label>IAC</label>
</RecordType>