force-app/main/default/objects/JMS_Broker_Call_XREF__c/recordTypes/JMS_IPS.recordType-meta.xml
<RecordType>
    <fullName>JMS_IPS</fullName>
    <active>true</active>
    <label>IPS</label>
</RecordType>