force-app/main/default/objects/JMS_Broker_Call_XREF__c/recordTypes/JMS_KeyImpact.recordType-meta.xml
<RecordType>
    <fullName>JMS_KeyImpact</fullName>
    <active>true</active>
    <label>KeyImpact</label>
</RecordType>