force-app/main/default/objects/JMS_Broker_Call_XREF__c/recordTypes/JMS_Magnum_Food_Brokers.recordType-meta.xml
<RecordType>
    <fullName>JMS_Magnum_Food_Brokers</fullName>
    <active>true</active>
    <label>Magnum Food Brokers</label>
</RecordType>