force-app/main/default/objects/JMS_Broker_Call_XREF__c/recordTypes/JMS_THE_CORE_GROUP.recordType-meta.xml
<RecordType>
    <fullName>JMS_THE_CORE_GROUP</fullName>
    <active>true</active>
    <label>THE CORE GROUP</label>
</RecordType>