force-app/main/default/objects/JMS_Broker_Call_XREF__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>JMS_Source_Key__c</columns>
    <columns>JMS_Source_Value__c</columns>
    <columns>JMS_Target_Key__c</columns>
    <columns>JMS_Target_Value__c</columns>
    <columns>JMS_Reason__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>